Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00497_get_answer.err
  File "./f00497_get_answer.py", line 62
    This function tests the get_answer function.
         ^
SyntaxError: invalid syntax
